--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>MovieBoard</title>
-  <meta http=equiv=“X-UA-Compatible” content=“IE=edge”>
-  <meta name=“viewport” content=“width = device-width, initial-scale = 1”>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
