--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -30,4 +30,19 @@ img.poster {
   max-height: 250px;
 }
 
+span.film-title {
+  font-weight: 800;
+}
+
+span.date {
+  float: right;
+}
+
+th, td {
+  width: 14.29%;
+}
+
+
+
+
 
