switch to alternate roxie scraping

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,6 +13,10 @@ body {
   overflow-x: hidden;
 }
 
+a:hover {
+  text-decoration: none !important;
+}
+
 .vcenter {
   display: inline-block;
   vertical-align: middle;
