--- a/app/assets/stylesheets/buzzbox.scss
+++ b/app/assets/stylesheets/buzzbox.scss
@@ -3,6 +3,16 @@
 
 div.buzz-box{
     background-color: black;
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        color: white;
+        display: none;
+        text-align: center;
+        width: 100%;
+    }
+
     img {
         background-color: black;
         max-width:100%;
@@ -15,26 +25,35 @@ div.buzz-box{
         -webkit-transition-duration: 0.3s; /* Safari */
     }
 
+    div.thumbnail {
+        position: relative;
+    }
+
     div.thumbnail:hover {
         position: relative;
         text-decoration: none;
         z-index: 1;
 
+        h2{
+        border-bottom: 2px solid yellow;
     }
 
-    img:hover {
-        position: relative;
-        cursor: pointer;
-        -webkit-transform: scale(1.2, 1.2);
-        -ms-transform: scale(1.2, 1.2);
-        transform: scale(1.2, 1.2);
-        transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s; /* Safari */
-      /*  box-shadow: 10px 10px 5px #cccc00;*/
-        opacity:0.5;
+        img {
+            position: relative;
+            cursor: pointer;
+            -webkit-transform: scale(1.3, 1.3);
+            -ms-transform: scale(1.3, 1.3);
+            transform: scale(1.3, 1.3);
+            transition-duration: 0.3s;
+            -webkit-transition-duration: 0.3s; /* Safari */
+            /*  box-shadow: 10px 10px 5px #cccc00;*/
+            opacity:0.5;
+
+        }
     }
 
     a {
+
         -webkit-transition: all 150ms ease;
         -moz-transition: all 150ms ease;
         -ms-transition: all 150ms ease;
@@ -59,13 +78,16 @@ div.buzz-box{
 
     ul.thumbnails {
         margin-bottom: 0px;
-        padding: 20px 0px 20px 0px;
+        padding: 15px 0px 15px 0px;
     }
     div.thumbnail {
+        position: relative;
         margin-bottom: 0px;
         border: none;
         background-color: black;
     }
+
+
 
 
     /* Carousel Control */
