--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/nav' %>
 
   <div class="container-fluid">
     <%= yield %>
+
+
+
   </div>
 
 
