--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-        <% if authenticated? %>
+        <% if current_user %>
         <li><a href="/users/<%= current_user.id %>">Welcome <%= current_user.username %></a></li>
         <li><a href="#">logout</a></li>
         <% else %>
