--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,11 +16,11 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-        <li><a href="/users/<%= current_user.id %>">Welcome <%= current_user.username %></a></li>
-        <li><a href="#">logout</a></li>
+        <li><%= link_to current_user.username, current_user%></li>
+        <li><%= link_to 'Logout', session_path(session), method: :delete %></li>
         <% else %>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
+        <li><%= link_to 'Login', new_session_path %></li>
+        <li><%= link_to 'Register', new_user_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
