--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,14 +6,13 @@
 
 <h2>Most Popular Screenings</h2>
 
+
 <!-- buzz-box -->
 <div class="row buzz-box  clearfix">
+
   <div class="col-xs-12">
-
     <ul class="thumbnails clearfix">
-
       <%@top_three_films_arr.each do |film_obj|%>
-
       <li class="col-xs-4 col-sm-3 col-md-2">
         <div class="thumbnail clearfix">
           <a href="#">
@@ -22,10 +21,8 @@
               <h2><%=film_obj.title%></h2>
             </div>
           </a>
-
         </div>
       </li>
-
       <%end%>
 
       <li class="hidden-xs col-sm-3 col-md-2 ">
@@ -50,24 +47,20 @@
       </li>
 
       <%end%>
-
     </ul>
-
   </div>
 </div>
 <!-- /buzz-box -->
 
-
+<!-- Calendar -->
 <div class="container">
   <% end_month = @date_filler.month + 2%>
   <% until @date_filler.month == end_month%>
   <% @date_filler = set_start_date(@date_filler) %>
   <div class="row">
     <div class="panel panel-default">
-      <!-- Default panel contents -->
       <div class="panel-heading"><%= Date::MONTHNAMES[@date_filler.month] %></div>
-
-      <!-- Calendar -->
+<!-- Responsive Calendar -->
       <div id="no-more-tables">
         <table class="table table-bordered col-sm-12 table-condensed cf" id="<%= Date::MONTHNAMES[@date_filler.month] %>">
           <thead class="cf">
@@ -93,9 +86,9 @@
 
                   <% films_today(@date_filler).each do |film| %>
                     <br>
-                    <span class='film-title'>
-                      <%= film.title %>
-                    </span>
+                      <span class='film-title hasTooltip' title="add to watchlist"><%= film.title %></span>
+                      <div class="tooltipContent" ><a href='#' id='<%=film.id%>'>add movie to watchlist</a></div>
+
                     <br>
 
                     <% screenings_today(film, @date_filler).each do |screening| %>
@@ -105,20 +98,21 @@
                     <% end %>
 
                     <br>
-                    <span class='theater-name'>
-                      <%= theater_name(film, @date_filler) %>
-                    </span>
+                    <span class='theater-name'><%= theater_name(film, @date_filler) %></span>
                   <% end %>
 
                 <% else %>
-                  <br><span class='placeholder hidden-sm hidden-md hidden-lg hidden-xl'>no screenings</span>
+                  <br>
+                  <span class='placeholder hidden-sm hidden-md hidden-lg hidden-xl'>no screenings</span>
                 <% end %>
 
               </td>
               <% @date_filler += 1 %>
               <% end %>
+
             </tr>
             <% end %>
+
           </tbody>
         </table>
       </div>
