--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SF Screenings</a>
+      <a class="navbar-brand" href="/">SF Film Calendar</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
