--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,6 +3,13 @@
   display: none;
 }
 
+div.add-film:before {
+  content: "add film to watchlist";
+}
+div.remove-film:before {
+  content: "remove from watchlist";
+}
+
 .alert {
   display: none;
   position: fixed;
@@ -15,22 +22,19 @@
 }
 
 .gradient {
-background: repeating-linear-gradient(
+  background: repeating-linear-gradient(
     45deg,
     transparent,
     transparent 10px,
     #ccc 10px,
     #ccc 20px
-  ),
+    ),
   linear-gradient(
     to bottom,
     #aaa,
     #fff
-  );
+    );
 }
-.grandient:before {
-    color: yellow;
-  }
 
 * {
   -webkit-box-sizing: border-box;
@@ -65,6 +69,10 @@ img.poster {
 
 span.film-title {
   font-weight: 800;
+}
+
+td.date-box div.film-listing-container:first-of-type{
+  margin-top: 2.2rem;
 }
 
 span.date {
@@ -127,16 +135,13 @@ div.page-header h1 {
 
   span.placeholder { font-style: italic; }
 
+  span.placeholder:before {
+    content: "no screenings";
+  }
+
   /* Label the data */
   #no-more-tables td:before {
     content: attr(data-title);
-  }
-
-  div.add-film:before {
-    content: "add film to watchlist";
-  }
-  div.remove-film:before {
-    content: "remove from watchlist";
   }
 
   #no-more-tables td.gradient:before {
