--- a/app/views/_calendar.html.erb
+++ b/app/views/_calendar.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="calendar-box">
   <% end_month = @date_filler.month + 2%>
   <% until @date_filler.month == end_month%>
   <% @date_filler = set_start_date(@date_filler) %>
