--- a/app/views/screenings/from_theater.js.erb
+++ b/app/views/screenings/from_theater.js.erb
@@ -1,1 +1,2 @@
 $("#calendar-box").html("<%= escape_javascript(render partial: '/calendar', locals: { screenings: @selected })%>");
+addBackgroundToAllEmptyDays();
