--- a/app/views/_theaters_nav.erb
+++ b/app/views/_theaters_nav.erb
@@ -12,4 +12,11 @@
     </li>
     <% end %>
   </ul>
+  <% if current_user %>
+  <div class="user-cal btn btn-success center col-xs-12"><%= link_to "#{current_user.username}'s Calendar", current_user, class: "theater-tab", :remote => true %></div>
+  <% else %>
+  <div class="user-cal btn btn-warning col-xs-12">
+    <%= link_to 'Log-in to save movies to your own calendar', new_session_path %>
+  </div>
+  <% end %>
 </div>
