--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-        <li><%= link_to current_user.username, current_user%></li>
+        <li><%= link_to current_user.username, current_user, :remote => true%></li>
         <li><%= link_to 'Logout', session_path(session), method: :delete %></li>
         <% else %>
         <li><%= link_to 'Login', new_session_path %></li>
