--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
   <%= render 'layouts/nav' %>
 
-  <div class="container-fluid">
+  <div class="container-fluid body-container">
 
     <%= yield %>
 
